C1 ugls - server nb ready for testing

--- a/notebook/Dockerfile
+++ b/notebook/Dockerfile
@@ -4,3 +4,5 @@ COPY --chown=${NB_UID}:${NB_GID} requirements.txt /tmp/
 RUN pip install --requirement /tmp/requirements.txt && \
     fix-permissions $CONDA_DIR && \
     fix-permissions /home/$NB_USER
+
+ENV DOCKER-SETUP=true
