--- a/.github/workflows/course4-week3-lab.yml
+++ b/.github/workflows/course4-week3-lab.yml
@@ -36,8 +36,9 @@ jobs:
         name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install numpy fastapi uvicorn scikit-learn pytest
+          pip install -r requirements.txt
       -
         name: Test with pytest
         run: |
+          cd app/
           pytest
