--- a/.github/workflows/course4-week3-lab.yml
+++ b/.github/workflows/course4-week3-lab.yml
@@ -5,7 +5,10 @@ name: C4W3-Ungraded-Lab
 # Controls when the action will run. 
 on:
   # Triggers the workflow on push request events only when there are changes in the desired path
-  push:
+  pull_request:
+    branches:
+      - 'main'
+
     paths:
       - 'course4/week3-ungraded-labs/C4_W3_Lab_4_Github_Actions/**'
 
