--- a/.github/workflows/course4-week3-lab.yml
+++ b/.github/workflows/course4-week3-lab.yml
@@ -14,7 +14,7 @@ jobs:
   # This workflow contains a single job called "test"
   test:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     defaults:
       run:
         # Use bash as the shell
@@ -31,7 +31,7 @@ jobs:
         name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.7.8'
+          python-version: '3.7.7'
       - 
         name: Install dependencies
         run: |
