--- a/.github/workflows/course4-week3-lab.yml
+++ b/.github/workflows/course4-week3-lab.yml
@@ -31,7 +31,7 @@ jobs:
         name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: '3.x'
+          python-version: '3.7.7'
       - 
         name: Install dependencies
         run: |
