--- a/course1/week1-ungraded-lab/requirements.txt
+++ b/course1/week1-ungraded-lab/requirements.txt
@@ -1,6 +1,6 @@
 cvlib==0.2.6
 opencv-python-headless==4.5.3.56
-Pillow==8.4.0.
+Pillow==8.4.0
 tensorflow==2.7.0
 uvicorn==0.16.0
 python-multipart==0.0.5
